error.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:compileDebugAidl NO-SOURCE
> Task :app:compileDebugRenderscript NO-SOURCE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\hooks\Camera2Hook.java:338: error: method does not override or implement a method from a supertype
            @Override
            ^
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\hooks\Camera2Hook.java:342: error: incompatible types: CaptureResult cannot be converted to CaptureFailure
                    original.onCaptureFailed(session, request, result);
                                                               ^
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:35: error: package R does not exist
        setContentView(R.layout.activity_picker);
                        ^
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:45: error: package R does not exist
            TextView infoTextView = findViewById(R.id.text_info);
                                                  ^
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:50: error: package R does not exist
            Button galleryButton = findViewById(R.id.button_gallery);
                                                 ^
C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:53: error: package R does not exist
            Button cancelButton = findViewById(R.id.button_cancel);
                                                ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors

[Incubating] Problems report is available at: file:///C:/Users/HP/Desktop/My%20files/CameraInterceptor/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\hooks\Camera2Hook.java:338: error: method does not override or implement a method from a supertype
              @Override
              ^
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\hooks\Camera2Hook.java:342: error: incompatible types: CaptureResult cannot be converted to CaptureFailure
                      original.onCaptureFailed(session, request, result);
                                                                 ^
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:35: error: package R does not exist
          setContentView(R.layout.activity_picker);
                          ^
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:45: error: package R does not exist
              TextView infoTextView = findViewById(R.id.text_info);
                                                    ^
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:50: error: package R does not exist
              Button galleryButton = findViewById(R.id.button_gallery);
                                                   ^
  C:\Users\HP\Desktop\My files\CameraInterceptor\app\src\main\java\com\camerainterceptor\ui\ImagePickerActivity.java:53: error: package R does not exist
              Button cancelButton = findViewById(R.id.button_cancel);
                                                  ^
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
15 actionable tasks: 1 executed, 14 up-to-date
